--- a/src/scss/_statistics.scss
+++ b/src/scss/_statistics.scss
@@ -6,7 +6,7 @@
   &__inline-stat {
     flex: 1 1 auto;
     background: var(--infobox-background);
-    color: var(--fg-600);
+    color: var(--fg-600); // Done
     font-family: var(--ff-note);
     font-size: var(--fs-xs);
     text-shadow: none;
