--- a/src/scss/_tax-cloud.scss
+++ b/src/scss/_tax-cloud.scss
@@ -23,7 +23,7 @@
   }
 
   &__tax-description {
-    color: var(--fg-800);
+    color: var(--fg-700); // Done
     font-size: var(--fs-xxs);
     font-style: italic;
     line-height: 1.5;
