--- a/src/scss/common/_utility.scss
+++ b/src/scss/common/_utility.scss
@@ -259,7 +259,7 @@ body:not(.is-editor):not(.is-admin) {
 }
 
 .separator-dot {
-  color: var(--fg-800);
+  color: var(--fg-800); // Done
   font-family: var(--ff-base);
 }
 
