--- a/src/scss/_search.scss
+++ b/src/scss/_search.scss
@@ -6,7 +6,11 @@
 
 .search-form[data-advanced="true"] {
   .search-form__bar .search-form__advanced-toggle {
-    color: var(--fg-600);
+    color: var(--fg-500); // Done
+
+    &:hover {
+      color: var(--fg-300); // Done
+    }
   }
 
   .search-form__current {
@@ -39,14 +43,10 @@
   }
 
   &__current {
-    color: var(--fg-900);
+    color: var(--fg-800); // Done
     font-size: 11px;
     line-height: 1.5;
     padding: 6px 2px 0;
-
-    &:not(:has(button)) {
-      display: none;
-    }
 
     button {
       color: currentColor;
@@ -56,29 +56,27 @@
       transition: color var(--transition-duration);
 
       &:hover {
-        color: var(--fg-500);
+        color: var(--fg-400); // Done
       }
     }
 
     > :not(:last-child) {
       &::after {
         content: "\2022";
-        color: var(--fg-900);
+        color: var(--fg-900); // Done
         padding: 0 2px 0 6px;
       }
     }
   }
 
   &__submit:is(button) {
+    --button-primary-background: transparent;
+    --button-primary-background-hover: transparent;
+    --button-primary-color: var(--fg-900); // Done
+    --button-primary-color-hover: var(--fg-400); // Done
     display: grid;
     place-content: center;
-    background: transparent !important;
-    color: var(--fg-900) !important;
     width: 32px;
-
-    &:hover {
-      color: var(--fg-500) !important;
-    }
   }
 
   &__select-group {
@@ -159,13 +157,13 @@
     &-toggle {
       display: grid;
       place-content: center;
-      color: var(--fg-900);
+      color: var(--fg-700); // Done
       font-size: 11px;
       height: 32px;
       transition: color var(--transition-duration);
 
       &:hover {
-        color: var(--fg-600);
+        color: var(--fg-400); // Done
       }
     }
 
@@ -197,10 +195,10 @@
     margin-top: 2rem;
 
     &:is(._no-results, ._no-params) {
+      color: var(--fg-950); // Done
       font: var(--font-weight-strong) var(--fs-ds)/1.5 var(--ff-note);
       text-align: center;
       overflow-wrap: break-word;
-      opacity: 0.25;
     }
   }
 }
