--- a/src/scss/common/_inputs.scss
+++ b/src/scss/common/_inputs.scss
@@ -210,7 +210,7 @@ input[type=radio] {
   display: flex;
   align-items: center;
   gap: 8px;
-  color: var(--fg-700);
+  color: var(--fg-600); // Done
   font-size: 13px;
   line-height: 1.3;
   padding: 1px;
@@ -225,7 +225,7 @@ input[type=radio] {
     .keyword-input__track::before {
       content: attr(data-hint);
       position: absolute;
-      color: var(--fg-900);
+      color: var(--input-placeholder-color);
       font-size: 12px;
       line-height: 1;
       padding: 4px 0 4px 0;
@@ -240,7 +240,7 @@ input[type=radio] {
     display: grid;
     place-content: center;
     background: var(--input-background);
-    color: var(--fg-900);
+    color: var(--fg-800); // Done
     font-family: var(--ff-input);
     font-size: 11px;
     font-weight: 400;
@@ -249,6 +249,10 @@ input[type=radio] {
     border-radius: var(--layout-border-radius-small) var(--layout-border-radius-small) 0 0;
     width: 40px;
     transform: translateY(-100%);
+
+    &:hover {
+      color: var(--fg-400); // Done
+    }
 
     .on {
       display: none;
@@ -336,7 +340,7 @@ input[type=radio] {
   &__tab-suggestion {
     pointer-events: none;
     grid-area: a;
-    color: var(--fg-900);
+    color: var(--fg-950); // Done
     font-size: 13px;
     line-height: 20px;
     letter-spacing: 0;
@@ -346,21 +350,21 @@ input[type=radio] {
   &__hints,
   &__no-suggestions,
   &__suggestion-list {
-    color: var(--fg-900);
+    color: var(--fg-700); // Done
     font-size: 11px;
     line-height: 2;
     margin: 4px 0 0 2px;
   }
 
   &__suggestion {
-    color: var(--fg-900);
+    color: var(--fg-700); // Done
     font-size: 11px;
     line-height: 2;
     margin-right: 12px;
     transition: color var(--transition-duration);
 
     &:is(button):hover {
-      color: var(--fg-500);
+      color: var(--fg-400); // Done
     }
   }
 }
