--- a/includes/functions/class-customizer-range-value-control/css/customizer-range-value-control.css
+++ b/includes/functions/class-customizer-range-value-control/css/customizer-range-value-control.css
@@ -43,9 +43,9 @@
   line-height: 20px;
   text-align: center;
   border-radius: 3px;
-  background: #dcdcde;
   padding: 3px 0;
   margin: 2px 0 2px 8px;
+  border: 1.5px dashed #dcdcde;
   width: 64px;
 }
 
