--- a/src/scss/_recommendation.scss
+++ b/src/scss/_recommendation.scss
@@ -42,7 +42,7 @@
     }
 
     :is(i, .icon) {
-      color: var(--fg-600); // Done
+      color: var(--fg-600);
       margin-right: .5rem;
     }
   }
