--- a/src/scss/_card.scss
+++ b/src/scss/_card.scss
@@ -89,7 +89,7 @@
       z-index: 1;
       display: grid;
       place-content: center;
-      color: var(--fg-600); // Done
+      color: var(--fg-600);
       font-family: var(--ff-heading);
       font-size: var(--fs-xl);
       line-height: 1;
@@ -218,7 +218,7 @@
     top: 0;
     right: 0;
     z-index: 2;
-    color: var(--fg-600); // Done
+    color: var(--fg-600);
     font-size: 14px;
     line-height: 1;
     text-align: center;
@@ -244,7 +244,7 @@
   }
 
   &__sticky-icon {
-    color: var(--fg-600); // Done
+    color: var(--fg-600);
     font-size: 75%;
     line-height: 1;
     opacity: .3;
@@ -258,7 +258,7 @@
     justify-content: flex-end;
     gap: .625em;
     flex-shrink: 0;
-    color: var(--fg-600); // Done
+    color: var(--fg-600);
     line-height: 1;
     text-align: right;
     padding: .625em .625em 0 0;
@@ -310,7 +310,7 @@
     text-align: center;
 
     .text-icon {
-      color: var(--fg-700); // Overrides hover // Done
+      color: var(--fg-700); // Overrides hover
     }
   }
 
@@ -349,7 +349,7 @@
   }
 
   &__by-author {
-    color: var(--fg-600); // Done
+    color: var(--fg-600);
     font-style: italic;
     letter-spacing: 0.03em;
 
@@ -363,7 +363,7 @@
   &__link-list {
     display: grid;
     gap: 3px;
-    color: var(--fg-500); // Done
+    color: var(--fg-500);
     font-size: var(--card-list-left-font-size, clamp(12px, 2.5cqw, 14px));
     line-height: 1.3;
 
@@ -394,13 +394,13 @@
 
     :is(i, .icon) {
       display: inline-block;
-      color: var(--fg-800); // Done
+      color: var(--fg-800);
       margin: 0 .35em 0 0;
     }
 
     .card__right {
       flex: 0 0 auto;
-      color: var(--fg-800); // Done
+      color: var(--fg-800);
       font-size: var(--card-list-right-font-size, clamp(12px, 2.35cqw, 13px));
       line-height: 1.5;
 
@@ -411,12 +411,12 @@
   }
 
   &__no-taxonomies {
-    color: var(--fg-800); // Done
+    color: var(--fg-800);
     font-family: var(--ff-base);
   }
 
   &__tag-list {
-    color: var(--fg-700); // Separators, tags have own color // Done
+    color: var(--fg-700); // Separators, tags have own color
     font-family: var(--ff-base);
     font-size: var(--card-tags-font-size, clamp(12px, 2.35cqw, 13px));
     line-height: 1.5;
@@ -461,7 +461,7 @@
   &__footer {
     display: flex;
     gap: 3px;
-    color: var(--fg-700); // Done
+    color: var(--fg-700);
     font-size: var(--card-footer-font-size, clamp(12px, 2.25cqw, 13px));
     line-height: 1;
     margin-top: var(--card-footer-margin-top, 1em);
@@ -471,7 +471,7 @@
     }
 
     .card-footer-icon {
-      color: var(--fg-800); // Done
+      color: var(--fg-800);
       margin-right: .3em;
 
       &:not(:first-child) {
@@ -484,7 +484,7 @@
       flex: 0 0 auto;
       display: grid;
       place-content: center;
-      color: var(--fg-700); // Done
+      color: var(--fg-700);
       font-family: var(--ff-heading);
       font-weight: 600;
       padding: 0 .5rem;
@@ -688,20 +688,20 @@
     user-select: none;
     display: none;
     content-visibility: hidden;
-    color: var(--fg-900); // Done
+    color: var(--fg-900);
     transition: color var(--transition-duration);
 
     &:hover {
-      color: var(--fg-600); // Done
+      color: var(--fg-600);
     }
   }
 
   .bold-link {
-    color: var(--fg-600); // Done
+    color: var(--fg-600);
     font-weight: var(--font-weight-medium);
 
     &:hover {
-      color: var(--fg-400); // Done
+      color: var(--fg-400);
     }
   }
 
