--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
   position: relative;
-  color: var(--fg-700); // Done
+  color: var(--fg-700);
   font-size: 12px;
   text-align: center;
   width: 100%;
