--- a/src/scss/_profile.scss
+++ b/src/scss/_profile.scss
@@ -42,7 +42,7 @@
         top: 8px;
         right: 8px;
         z-index: 1;
-        color: var(--fg-800); // Done
+        color: var(--fg-800);
       }
     }
 
@@ -53,14 +53,14 @@
     &-label {
       display: flex;
       align-items: flex-end;
-      color: var(--fg-500); // Done
+      color: var(--fg-500);
       font-size: var(--fs-xs);
       font-weight: var(--font-weight-medium);
       padding: 0 0 2px;
     }
 
     &-note {
-      color: var(--fg-900); // Done
+      color: var(--fg-900);
       font-size: var(--fs-xxs);
       line-height: 1.3;
       padding: .5rem 2px 0;
@@ -108,7 +108,7 @@
       align-items: center;
       gap: .5rem;
       background: var(--button-secondary-background);
-      color: var(--fg-600); // Done
+      color: var(--fg-600);
       font-size: var(--fs-xs);
       font-weight: var(--font-weight-medium);
       text-align: center;
@@ -139,8 +139,8 @@
 
       &._connected {
         cursor: default;
-        background: var(--bg-50); // Done
-        color: var(--fg-inverted); // Done
+        background: var(--bg-50);
+        color: var(--fg-inverted);
         text-shadow: none;
         border: none;
       }
@@ -168,7 +168,7 @@
   }
 
   &__admin-notes {
-    color: var(--fg-700); // Done
+    color: var(--fg-700);
     font-size: var(--fs-xs);
     font-style: italic;
     line-height: 1.3;
@@ -179,7 +179,7 @@
 
     .warning,
     .warning > i {
-      color: var(--red-400); // Done
+      color: var(--red-400);
     }
 
     li {
@@ -191,7 +191,7 @@
       }
 
       i {
-        color: var(--fg-900); // Done
+        color: var(--fg-900);
         flex-shrink: 0;
         padding-left: 2px;
         width: 24px;
