--- a/src/scss/_singular.scss
+++ b/src/scss/_singular.scss
@@ -40,7 +40,7 @@
 
     &-count {
       flex-shrink: 0;
-      color: var(--fg-800); // Done
+      color: var(--fg-800);
       font-weight: var(--font-weight-medium);
     }
 
@@ -49,7 +49,7 @@
     }
 
     &-description {
-      color: var(--fg-700); // Done
+      color: var(--fg-700);
     }
   }
 }
