--- a/src/scss/_story.scss
+++ b/src/scss/_story.scss
@@ -167,7 +167,7 @@ $header_breakpoint: 640px;
 
     &-meta {
       display: block;
-      color: var(--fg-600); // Done
+      color: var(--fg-600);
       font-size: var(--fs-xs);
       font-style: italic;
       line-height: 1.3;
@@ -186,7 +186,7 @@ $header_breakpoint: 640px;
   }
 
   &__copyright-notice {
-    color: var(--fg-800); // Done
+    color: var(--fg-800);
     font-size: var(--fs-xxs);
     font-style: italic;
     margin-top: 1.5rem;
@@ -275,7 +275,7 @@ $header_breakpoint: 640px;
     display: flex;
     align-items: center;
     gap: 12px;
-    color: var(--fg-700); // Done
+    color: var(--fg-700);
     font-size: var(--fs-dxs);
     font-weight: var(--font-weight-semi-strong);
     padding: 0 6px;
@@ -299,7 +299,7 @@ $header_breakpoint: 640px;
     &__folding-toggle {
       display: block;
       content-visibility: visible;
-      color: var(--fg-800); // Done
+      color: var(--fg-800);
       line-height: 1.125;
       text-align: center;
       padding: 1.125rem 0;
@@ -307,7 +307,7 @@ $header_breakpoint: 640px;
       transition: color var(--transition-duration);
 
       &:hover {
-        color: var(--fg-400); // Done
+        color: var(--fg-400);
       }
     }
   }
@@ -325,7 +325,7 @@ $header_breakpoint: 640px;
     cursor: pointer;
     display: grid;
     place-content: center;
-    color: var(--fg-600); // Done
+    color: var(--fg-600);
     font-size: var(--fs-ds);
     height: 2.25rem;
     width: 1.5rem;
@@ -341,7 +341,7 @@ $header_breakpoint: 640px;
     align-items: center;
     justify-content: flex-end;
     flex-wrap: wrap;
-    color: var(--fg-600); // Done
+    color: var(--fg-600);
     font-family: var(--ff-note);
     font-size: var(--fs-ds); // 14px (desktop) to 13px (mobile)
     line-height: 1.75rem;
@@ -355,7 +355,7 @@ $header_breakpoint: 640px;
 
       &:not(.checkmark)::before {
         content: unicode("2022");
-        color: var(--fg-800); // Done
+        color: var(--fg-800);
         font-family: var(--ff-base);
         padding: 0 .25rem 0 .35rem;
 
@@ -366,13 +366,13 @@ $header_breakpoint: 640px;
     }
 
     button.checkmark {
-      color: var(--checkmark-checked); // Done
+      color: var(--checkmark-checked);
       font-size: 18px;
       padding: 0 4px;
       margin: 0 0 0 1.25rem;
 
       &:not(.marked) {
-        color: var(--checkmark-not-checked); // Done
+        color: var(--checkmark-not-checked);
         text-shadow: none;
       }
     }
@@ -380,7 +380,7 @@ $header_breakpoint: 640px;
     > :is(span, label) {
       :is(i, .icon) {
         display: none;
-        color: var(--fg-800); // Done
+        color: var(--fg-800);
         margin-right: .25rem;
 
         @include bp(640px) {
@@ -393,7 +393,7 @@ $header_breakpoint: 640px;
   .icon-password {
     &.grid-view {
       grid-area: 1/3/2/4;
-      color: var(--fg-700); // Done
+      color: var(--fg-700);
       text-align: right;
     }
   }
@@ -423,16 +423,16 @@ $header_breakpoint: 640px;
     }
 
     &-title {
-      color: var(--heading-link-color); // Done
+      color: var(--heading-link-color);
       font-weight: var(--font-weight-strong);
 
       &:hover {
-        color: var(--heading-link-color-hover); // Done
+        color: var(--heading-link-color-hover);
       }
     }
 
     &-content {
-      color: var(--fg-600); // Done
+      color: var(--fg-600);
     }
   }
 
