--- a/src/scss/comments.scss
+++ b/src/scss/comments.scss
@@ -46,7 +46,7 @@
   margin: 16px 0 24px;
 
   &__must-login {
-    color: var(--fg-800); // Done
+    color: var(--fg-800);
     font-size: var(--fs-xs);
     text-align: center;
 
@@ -55,7 +55,7 @@
       transition: color var(--transition-duration);
 
       &:hover {
-        color: var(--fg-400); // Done
+        color: var(--fg-400);
       }
     }
   }
@@ -105,7 +105,7 @@
         flex-grow: 1;
         display: flex;
         align-items: center;
-        color: var(--fg-800); // Done
+        color: var(--fg-800);
         font-size: 13px;
         height: 32px;
       }
@@ -113,7 +113,7 @@
       .right {
         display: flex;
         flex-shrink: 0;
-        color: var(--fg-800); // Done
+        color: var(--fg-800);
         font-size: 14px;
         margin: 0 -4px;
       }
@@ -125,7 +125,7 @@
         width: 32px;
 
         &:hover {
-          color: var(--fg-400); // Done
+          color: var(--fg-400);
         }
       }
     }
@@ -195,14 +195,14 @@
   }
 
   .private-comment-notice {
-    color: var(--fg-700); // Done
+    color: var(--fg-700);
   }
 
   &__checkbox-label-pair {
     display: flex;
     align-items: center;
     gap: 8px;
-    color: var(--fg-600); // Done
+    color: var(--fg-600);
     font-size: 13px;
     line-height: 1.3;
     height: 32px;
@@ -265,13 +265,13 @@
   }
 
   &__notice {
-    color: var(--fg-800); // Done
+    color: var(--fg-800);
     font-size: 13px;
     padding-top: 8px;
   }
 
   &__disabled {
-    color: var(--fg-800); // Done
+    color: var(--fg-800);
     font-size: 13px;
     text-align: center;
     margin-top: 40px;
@@ -354,7 +354,7 @@
   }
 
   &._unapproved > .fictioneer-comment__container {
-    color: var(--fg-800); // Done
+    color: var(--fg-800);
 
     :is([data-action=unapprove], .fictioneer-comment__actions) {
       display: none;
@@ -389,7 +389,7 @@
       position: absolute;
       top: -7px;
       right: 6px;
-      color: var(--fg-600); // Done
+      color: var(--fg-600);
       transform: rotate(30deg);
     }
   }
@@ -506,7 +506,7 @@
   }
 
   &__info {
-    color: var(--fg-700); // Done
+    color: var(--fg-700);
     font-size: 11px;
     font-style: italic;
     line-height: 1.3;
@@ -516,16 +516,16 @@
 
   &__in-moderation,
   &__hidden-notice {
-    color: var(--fg-900); // Done
+    color: var(--fg-900);
     font-size: var(--fs-xs);
     font-style: italic;
   }
 
   &__in-moderation {
-    color: var(--fg-700); // Done
+    color: var(--fg-700);
 
     :is(i, .icon) {
-      color: var(--fg-800); // Done
+      color: var(--fg-800);
     }
   }
 
@@ -550,7 +550,7 @@
   }
 
   &__edit-note {
-    color: var(--fg-900); // Done
+    color: var(--fg-900);
     font-size: var(--fs-xxs);
     font-style: italic;
     margin-top: 16px;
@@ -626,7 +626,7 @@
     display: flex;
     align-items: flex-end;
     justify-content: space-between;
-    color: var(--fg-700); // Done
+    color: var(--fg-700);
     font-size: var(--fs-xs);
     line-height: 18px;
     margin-top: 1rem;
@@ -668,7 +668,7 @@
   }
 
   .comment-quick-button {
-    color: var(--fg-600); // Done
+    color: var(--fg-600);
     padding: 0 2px;
     transition: opacity var(--transition-duration);
 
@@ -696,7 +696,7 @@
     }
 
     &.on {
-      color: var(--red-400); // Done
+      color: var(--red-400);
     }
   }
 
@@ -710,10 +710,10 @@
   }
 
   .comment-reply-link {
-    color: var(--fg-700); // Done
+    color: var(--fg-700);
 
     &:hover {
-      color: var(--fg-400); // Done
+      color: var(--fg-400);
     }
 
     i {
