--- a/src/scss/common/_formatting.scss
+++ b/src/scss/common/_formatting.scss
@@ -1,7 +1,7 @@
 :is(h1, h2, h3, h4, h5, h6) {
   --font-weight-strong: var(--font-weight-heading);
   display: block;
-  color: var(--fg-400); // Done
+  color: var(--fg-400);
   font: var(--font-weight-heading) 1em/1.3 var(--ff-heading);
 }
 
@@ -245,7 +245,7 @@ p a,
 
   :where(.list, ul.block-list) {
     li::marker {
-      color: var(--list-marker-color, var(--fg-600)); // Done
+      color: var(--list-marker-color, var(--fg-600));
     }
   }
 
@@ -267,7 +267,7 @@ p a,
   position: absolute;
   top: 50%;
   left: 50%;
-  color: var(--fg-600); // Done
+  color: var(--fg-600);
   font-size: var(--fs-xs);
   font-weight: var(--font-weight-medium);
   text-align: center;
@@ -277,7 +277,7 @@ p a,
   transition: color var(--transition-duration);
 
   &:hover {
-    color: var(--fg-400); // Done
+    color: var(--fg-400);
   }
 }
 
