--- a/src/scss/common/_inputs.scss
+++ b/src/scss/common/_inputs.scss
@@ -210,7 +210,7 @@ input[type=radio] {
   display: flex;
   align-items: center;
   gap: 8px;
-  color: var(--fg-600); // Done
+  color: var(--fg-600);
   font-size: 13px;
   line-height: 1.3;
   padding: 1px;
@@ -240,7 +240,7 @@ input[type=radio] {
     display: grid;
     place-content: center;
     background: var(--input-background);
-    color: var(--fg-800); // Done
+    color: var(--fg-800);
     font-family: var(--ff-input);
     font-size: 11px;
     font-weight: 400;
@@ -251,7 +251,7 @@ input[type=radio] {
     transform: translateY(-100%);
 
     &:hover {
-      color: var(--fg-400); // Done
+      color: var(--fg-400);
     }
 
     .on {
@@ -340,7 +340,7 @@ input[type=radio] {
   &__tab-suggestion {
     pointer-events: none;
     grid-area: a;
-    color: var(--fg-950); // Done
+    color: var(--fg-950);
     font-size: 13px;
     line-height: 20px;
     letter-spacing: 0;
@@ -350,21 +350,21 @@ input[type=radio] {
   &__hints,
   &__no-suggestions,
   &__suggestion-list {
-    color: var(--fg-700); // Done
+    color: var(--fg-700);
     font-size: 11px;
     line-height: 2;
     margin: 4px 0 0 2px;
   }
 
   &__suggestion {
-    color: var(--fg-700); // Done
+    color: var(--fg-700);
     font-size: 11px;
     line-height: 2;
     margin-right: 12px;
     transition: color var(--transition-duration);
 
     &:is(button):hover {
-      color: var(--fg-400); // Done
+      color: var(--fg-400);
     }
   }
 }
